--- a/VS_Solution_2019_x64/Algorithms.vcxproj
+++ b/VS_Solution_2019_x64/Algorithms.vcxproj
@@ -55,6 +55,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -78,11 +79,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Algorithms\Sorter.cpp" />
     <ClCompile Include="src\app.cpp" />
+    <ClCompile Include="src\Utils\Random.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Sort\Sort.h" />
-    <ClInclude Include="src\Utils\Common.h" />
+    <ClInclude Include="src\Algorithms\Sorter.h" />
+    <ClInclude Include="src\Utils\Random.h" />
     <ClInclude Include="src\Utils\Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
